# OnvifClient_gSOAP

./: .gitignore  CMakeLists.txt  GENERATE_ONVIF_CODE.md  README.md
include/: soapStub.h  wsdd.nsmap  wsddH.h  wsddStub.h
include/plugin/: mecevp.h
include/soapProxy/: soapAdvancedSecurityServiceBindingProxy.h  soapDeviceBindingProxy.h  soapDeviceIOBindingProxy.h  soapImagingBindingProxy.h  soapMediaBindingProxy.h  soapPTZBindingProxy.h  soapPullPointSubscriptionBindingProxy.h  soapRemoteDiscoveryBindingProxy.h  soapwsddProxy.h
samples/common/: common.h
samples/deviceBinding/: CMakeLists.txt  deviceBinding.cpp
samples/mediaBinding/: CMakeLists.txt  mediaBinding.cpp
samples/ptzBinding/: CMakeLists.txt  ptzBinding.cpp
samples/remoteDiscovery/: CMakeLists.txt  remoteDiscovery.cpp
src/: stdsoap2.cpp  wsddClient.cpp
src/plugin/: mecevp.cpp  smdevp.cpp  threads.cpp  wsaapi.cpp  wsseapi.cpp
src/soapProxy/: soapAdvancedSecurityServiceBindingProxy.cpp  soapDeviceBindingProxy.cpp  soapDeviceIOBindingProxy.cpp  soapImagingBindingProxy.cpp  soapMediaBindingProxy.cpp  soapPTZBindingProxy.cpp  soapPullPointSubscriptionBindingProxy.cpp  soapRemoteDiscoveryBindingProxy.cpp  soapwsddProxy.cpp
